Removed open API UIFactory and all the supporting classes. Added int test coverage that a reasonable failure is received when trying to use the open API from an older version.